se agrega comentario de que hacer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Warriors Boxing Gym</h1>
+    <!-- este es un nuevo sidebar para la pag de warriors -->
     <section class="sidebar">
       <nav>
         <a class="menuitem" href="quienes-somos.html">Quienes somos </a>
