se cambian colores a pedido del cliente

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Warriors Boxing Gym</h1>
-    <!-- este es un nuevo sidebar para la pag de warriors -->
+    <!-- este es un nuevo sidebar para la pag de warriors 
     <section class="sidebar">
       <nav>
         <a class="menuitem" href="quienes-somos.html">Quienes somos </a>
@@ -16,7 +16,7 @@
         <a class="menuitem" href="productos.html">Nuestros productos</a>
         <a class="menuitem" href="contacto.html">Contacto </a>
       </nav>
-    </section>
+    </section> -->
 
     <!-- Nav de Menu -->
 
