se agregan funciones responsive

--- a/productos.html
+++ b/productos.html
@@ -17,18 +17,39 @@
     </nav>
 
     <h2>Podés encontrar</h2>
-    <div class="productos">
-      <ul>
-        <li>Remeras</li>
+    <!-- Con esto hacemos flexbox para el responsive -->
+    <section class="container">
+      <div class="box">
+        <p>Remeras</p>
         <img src="./imagenes/productos/remeras.png" alt="" />
-        <li>Musculosas</li>
+      </div>
+      <div class="box">
+        <p>Musculosas</p>
         <img src="./imagenes/productos/musculosas.png" alt="" />
-        <li>Guantes</li>
+      </div>
+      <div class="box">
+        <p>Guantes</p>
         <img src="./imagenes/productos/guantes.png" alt="" />
-        <li>Vendas</li>
+      </div>
+      <div class="box">
+        <p>Vendas</p>
         <img src="./imagenes/productos/vendas.png" alt="" />
-      </ul>
-    </div>
+      </div>
+      <!-- 
+      <div class="productos">
+      </div>
+        <ul>
+          <li>Remeras</li>
+          <img src="./imagenes/productos/remeras.png" alt="" />
+          <li>Musculosas</li>
+          <img src="./imagenes/productos/musculosas.png" alt="" />
+          <li>Guantes</li>
+          <img src="./imagenes/productos/guantes.png" alt="" />
+          <li>Vendas</li>
+          <img src="./imagenes/productos/vendas.png" alt="" />
+        </ul>
+      </div> -->
+    </section>
 
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
