--- a/ubicacion.html
+++ b/ubicacion.html
@@ -15,23 +15,36 @@
       <a href="contacto.html">Contacto</a>
       <a href="quienes-somos.html">Quienes Somos</a>
     </nav>
-    <div id="textomapa">
-      <p>
-        Podes encontrarnos en Google Maps
-        <a href="https://maps.app.goo.gl/YRHraV3UMSZsubePA" target="_blank"
-          >acá</a
-        >
-      </p>
-      <img src="./imagenes/fotos_lugar/mapa.png" alt="" />
-    </div>
+    <section>
+      <div id="textomapa">
+        <p>
+          Podes encontrarnos en Google Maps
+          <a href="https://maps.app.goo.gl/YRHraV3UMSZsubePA" target="_blank"
+            >acá</a
+          >
+        </p>
+        <img
+          src="./imagenes/fotos_lugar/mapa.png"
+          class="imagenes-flex"
+          alt=""
+        />
+      </div>
 
-    <!-- Este div es para las imagenes del lugar-->
-    <div class="imagenes">
-      <h2>Conocé nuestras instalaciones</h2>
-      <img src="./imagenes/fotos_lugar/foto-gym1.png" alt="" />
-      <img src="./imagenes/fotos_lugar/foto-gym2.png" alt="" />
-    </div>
-
+      <!-- Este div es para las imagenes del lugar-->
+      <div class="imagenes">
+        <h2>Conocé nuestras instalaciones</h2>
+        <img
+          src="./imagenes/fotos_lugar/foto-gym1.png"
+          class="imagenes-flex"
+          alt=""
+        />
+        <img
+          src="./imagenes/fotos_lugar/foto-gym2.png"
+          class="imagenes-flex"
+          alt=""
+        />
+      </div>
+    </section>
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
     </footer>
