--- a/productos.html
+++ b/productos.html
@@ -3,19 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Warriros Boxing Gym - Productos</title>
   </head>
   <body>
-    <h1>Conocé todos nuestros productos</h1>
-    <!-- Este Nav lo voy a reutilizar para volver al menú-->
-    <nav class="menu">
-      <a href="index.html"> Pagina Principal </a>
-      <a href="quienes-somos.html"> Quienes Somos</a>
-      <a href="contacto.html">Contacto</a>
-      <a href="ubicacion.html">Ubicación</a>
-    </nav>
-
+    <header>
+      <h1>Conocé todos nuestros productos</h1>
+      <!-- Nav con bootstrap 5.3-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Menu</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#"
+              >Productos <span class="sr-only">(Actual)</span></a
+            >
+            <a class="nav-item nav-link" href="./index.html">Home</a>
+            <a class="nav-item nav-link" href="./quienes-somos.html"
+              >Quienes Somos</a
+            >
+            <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-item nav-link" href="./ubicacion.html">Ubicación</a>
+          </div>
+        </div>
+      </nav>
+    </header>
     <h2>Podés encontrar</h2>
     <!-- Con esto hacemos flexbox para el responsive -->
     <section class="container">
@@ -35,24 +63,16 @@
         <p>Vendas</p>
         <img src="./imagenes/productos/vendas.png" alt="" />
       </div>
-      <!-- 
-      <div class="productos">
-      </div>
-        <ul>
-          <li>Remeras</li>
-          <img src="./imagenes/productos/remeras.png" alt="" />
-          <li>Musculosas</li>
-          <img src="./imagenes/productos/musculosas.png" alt="" />
-          <li>Guantes</li>
-          <img src="./imagenes/productos/guantes.png" alt="" />
-          <li>Vendas</li>
-          <img src="./imagenes/productos/vendas.png" alt="" />
-        </ul>
-      </div> -->
     </section>
 
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
     </footer>
+    <!-- Script de bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
