--- a/ubicacion.html
+++ b/ubicacion.html
@@ -3,18 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Warriors Boxing Gym - Ubicación</title>
   </head>
   <body>
-    <h1>Nuestra Ubicación</h1>
-    <!-- Este nav lo voy a reutilizar para volver al menú-->
-    <nav class="menu">
-      <a href="index.html"> Pagina Principal </a>
-      <a href="productos.html"> Productos</a>
-      <a href="contacto.html">Contacto</a>
-      <a href="quienes-somos.html">Quienes Somos</a>
-    </nav>
+    <header>
+      <h1>Nuestra Ubicación</h1>
+      <!-- Nav con bootstrap 5.3-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Menu</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#"
+              >Ubicación <span class="sr-only">(Actual)</span></a
+            >
+            <a class="nav-item nav-link" href="./index.html">Home</a>
+            <a class="nav-item nav-link" href="./quienes-somos.html"
+              >Quienes Somos</a
+            >
+            <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-item nav-link" href="./productos.html">Productos</a>
+          </div>
+        </div>
+      </nav>
+    </header>
     <section>
       <div id="textomapa">
         <p>
@@ -48,5 +77,11 @@
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
     </footer>
+    <!-- Script de bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
