--- a/productos.html
+++ b/productos.html
@@ -46,22 +46,50 @@
     </header>
     <h2>Podés encontrar</h2>
     <!-- Con esto hacemos flexbox para el responsive -->
-    <section class="container">
-      <div class="box">
-        <p>Remeras</p>
-        <img src="./imagenes/productos/remeras.png" alt="" />
-      </div>
-      <div class="box">
-        <p>Musculosas</p>
-        <img src="./imagenes/productos/musculosas.png" alt="" />
-      </div>
-      <div class="box">
-        <p>Guantes</p>
-        <img src="./imagenes/productos/guantes.png" alt="" />
-      </div>
-      <div class="box">
-        <p>Vendas</p>
-        <img src="./imagenes/productos/vendas.png" alt="" />
+    <section class="mainGrid">
+      <div class="container">
+        <div class="boxes">
+          <div class="box">
+            <p>Remeras</p>
+            <img src="./imagenes/productos/remeras.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Musculosas</p>
+            <img src="./imagenes/productos/musculosas.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Guantes</p>
+            <img src="./imagenes/productos/guantes.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Vendas</p>
+            <img src="./imagenes/productos/vendas.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Vendas</p>
+            <img src="./imagenes/productos/vendas.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Vendas</p>
+            <img src="./imagenes/productos/vendas.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Vendas</p>
+            <img src="./imagenes/productos/vendas.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Vendas</p>
+            <img src="./imagenes/productos/vendas.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Vendas</p>
+            <img src="./imagenes/productos/vendas.png" alt="" />
+          </div>
+          <div class="box">
+            <p>Vendas</p>
+            <img src="./imagenes/productos/vendas.png" alt="" />
+          </div>
+        </div>
       </div>
     </section>
 
