--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Nav de Menu -->
 
     <!-- div de imagenes que ahora lo voy a tratar de hacer un section -->
-    <section>
+    <section class="first">
       <main>
         <div class="imagenes">
           <h2>Aprendé boxeo de verdad</h2>
