--- a/productos.html
+++ b/productos.html
@@ -51,43 +51,35 @@
         <div class="boxes">
           <div class="box">
             <p>Remeras</p>
-            <img src="./imagenes/productos/remeras.png" alt="" />
+            <img src="./imagenes/productos/remeras/remera-naranja.jpg" alt="" />
           </div>
           <div class="box">
             <p>Musculosas</p>
-            <img src="./imagenes/productos/musculosas.png" alt="" />
+            <img src="./imagenes/productos/musculosas/musculosas.png" alt="" />
           </div>
           <div class="box">
             <p>Guantes</p>
-            <img src="./imagenes/productos/guantes.png" alt="" />
+            <img src="./imagenes/productos/guantes/guantes.png" alt="" />
           </div>
           <div class="box">
             <p>Vendas</p>
-            <img src="./imagenes/productos/vendas.png" alt="" />
+            <img src="./imagenes/productos/vendas/vendas.png" alt="" />
           </div>
           <div class="box">
-            <p>Vendas</p>
-            <img src="./imagenes/productos/vendas.png" alt="" />
+            <p>Cabezales</p>
+            <img src="./imagenes/productos/accesorios/cabezal.jpg" alt="" />
           </div>
           <div class="box">
-            <p>Vendas</p>
-            <img src="./imagenes/productos/vendas.png" alt="" />
+            <p>Bucales</p>
+            <img src="./imagenes/productos/accesorios/bucal.jpg" alt="" />
           </div>
           <div class="box">
-            <p>Vendas</p>
-            <img src="./imagenes/productos/vendas.png" alt="" />
+            <p>Bolsas</p>
+            <img src="./imagenes/productos/accesorios/bolsa.jpg" alt="" />
           </div>
           <div class="box">
-            <p>Vendas</p>
-            <img src="./imagenes/productos/vendas.png" alt="" />
-          </div>
-          <div class="box">
-            <p>Vendas</p>
-            <img src="./imagenes/productos/vendas.png" alt="" />
-          </div>
-          <div class="box">
-            <p>Vendas</p>
-            <img src="./imagenes/productos/vendas.png" alt="" />
+            <p>Kits</p>
+            <img src="./imagenes/productos/accesorios/kit-title.png" alt="" />
           </div>
         </div>
       </div>
