arreglado el header

--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,8 @@
   </head>
   <body>
     <header>
-      <h1>Conocé todos nuestros productos</h1>
+      <img src="./imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
+      <h1>Warriors Boxing Gym</h1>
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Menu</a>
@@ -44,7 +45,7 @@
         </div>
       </nav>
     </header>
-    <h2>Podés encontrar</h2>
+    <h2>Podés encontrar estos productos</h2>
     <!-- Con esto hacemos flexbox para el responsive -->
     <section class="mainGrid">
       <div class="container">
