--- a/ubicacion.html
+++ b/ubicacion.html
@@ -14,7 +14,8 @@
   </head>
   <body>
     <header>
-      <h1>Nuestra Ubicación</h1>
+      <img src="./imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
+      <h1>Warriors Boxing Gym</h1>
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Menu</a>
