se separa todo en carpetas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <title>Warriors Boxing Gym</title>
   </head>
   <body>
@@ -35,12 +35,18 @@
             <a class="nav-item nav-link active" href="#"
               >Home <span class="sr-only">(Actual)</span></a
             >
-            <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
-            <a class="nav-item nav-link" href="./quienes-somos.html"
+            <a class="nav-item nav-link" href="./pages/contacto.html"
+              >Contacto</a
+            >
+            <a class="nav-item nav-link" href="./pages/quienes-somos.html"
               >Quienes Somos</a
             >
-            <a class="nav-item nav-link" href="./productos.html">Productos</a>
-            <a class="nav-item nav-link" href="./ubicacion.html">Ubicación</a>
+            <a class="nav-item nav-link" href="./pages/productos.html"
+              >Productos</a
+            >
+            <a class="nav-item nav-link" href="./pages/ubicacion.html"
+              >Ubicación</a
+            >
           </div>
         </div>
       </nav>
