--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -9,12 +9,12 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <title>Warriors Boxing Gym - Quienes somos</title>
   </head>
   <body>
     <header>
-      <img src="./imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
+      <img src="../imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
       <h1>Warriors Boxing Gym</h1>
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,7 +35,7 @@
             <a class="nav-item nav-link active" href="#"
               >Quienes Somos <span class="sr-only">(Actual)</span></a
             >
-            <a class="nav-item nav-link" href="./index.html">Home</a>
+            <a class="nav-item nav-link" href="../index.html">Home</a>
             <a class="nav-item nav-link" href="./productos.html">Productos</a>
             <a class="nav-item nav-link" href="./ubicacion.html">Ubicación</a>
             <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
@@ -60,7 +60,10 @@
     </div>
     <!-- Clase imagenes para poder alinear solo la imagen al centro-->
     <div class="imagenes">
-      <img src="./imagenes/fotos_lugar/warriors-logo.png" alt="warriors-logo" />
+      <img
+        src="../imagenes/fotos_lugar/warriors-logo.png"
+        alt="warriors-logo"
+      />
       <p>
         Estamos altamente capacitados para entrenarte de forma sana, intensa y
         profesional. <br />
