--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,12 +9,12 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <title>Warriors Boxing Gym - Contacto</title>
   </head>
   <body>
     <header>
-      <img src="./imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
+      <img src="../imagenes/fotos_lugar/warriors-logo-nue.png" border="0" />
       <h1>Warriors Boxing Gym</h1>
       <!-- Nav con bootstrap 5.3-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,7 +35,7 @@
             <a class="nav-item nav-link active" href="#"
               >Contacto <span class="sr-only">(Actual)</span></a
             >
-            <a class="nav-item nav-link" href="./index.html">Home</a>
+            <a class="nav-item nav-link" href="../index.html">Home</a>
             <a class="nav-item nav-link" href="./quienes-somos.html"
               >Quienes Somos</a
             >
