arreglado el navbar

--- a/index.html
+++ b/index.html
@@ -35,25 +35,101 @@
             <a class="nav-item nav-link active" href="#"
               >Home <span class="sr-only">(Actual)</span></a
             >
-            <a class="nav-item nav-link" href="./pages/contacto.html"
-              >Contacto</a
-            >
+            <!-- ORDENAR EL NAV CORRECTAMENTE PARA QUE NO SE MUEVA DE LUGAR EL MENU-->
+            <!-- ORDENAR EL NAV CORRECTAMENTE PARA QUE NO SE MUEVA DE LUGAR EL MENU-->
+            <!-- ORDENAR EL NAV CORRECTAMENTE PARA QUE NO SE MUEVA DE LUGAR EL MENU-->
+            <!-- ORDENAR EL NAV CORRECTAMENTE PARA QUE NO SE MUEVA DE LUGAR EL MENU-->
+
             <a class="nav-item nav-link" href="./pages/quienes-somos.html"
               >Quienes Somos</a
             >
-            <a class="nav-item nav-link" href="./pages/productos.html"
-              >Productos</a
+            <a class="nav-item nav-link" href="./pages/contacto.html"
+              >Contacto</a
             >
+
             <a class="nav-item nav-link" href="./pages/ubicacion.html"
               >Ubicación</a
             >
+            <!-- dropdown -->
+            <!-- <div class="nav-item dropdown"> -->
+            <div class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="./pages/productos.html"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Productos
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="./pages/productos.html"
+                    >Productos</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/remeras.html"
+                    >Remeras</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/guantes.html"
+                    >Guantes</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/musculosas.html"
+                    >Musculosas</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/vendas.html"
+                    >Vendas</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/cabezales.html"
+                    >Cabezales</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/bucales.html"
+                    >Bucales</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/bolsas.html"
+                    >Bolsas</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./pages/cart-products/kits.html"
+                    >Kits</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
     </header>
-    <!-- este es un nuevo sidebar para la pag de warriors -->
-    <!-- Nav de Menu -->
-
     <!-- div de imagenes que ahora lo voy a tratar de hacer un section -->
     <section class="first">
       <main>
