--- a/pages/cart-products/remeras.html
+++ b/pages/cart-products/remeras.html
@@ -35,6 +35,7 @@
             <a class="nav-item nav-link active" href="#"
               >Remeras <span class="sr-only">(Actual)</span></a
             >
+            <a class="nav-item nav-link" href="/index.html">Home</a>
             <a class="nav-item nav-link" href="../contacto.html">Contacto</a>
             <a class="nav-item nav-link" href="../quienes-somos.html"
               >Quienes Somos</a
@@ -59,6 +60,11 @@
                   >
                 </li>
                 <li>
+                  <a class="nav-item nav-link active" href="#"
+                    >Remeras <span class="sr-only"></span
+                  ></a>
+                </li>
+                <li>
                   <a class="dropdown-item" href="./guantes.html">Guantes</a>
                 </li>
                 <li>
@@ -69,28 +75,50 @@
                 <li>
                   <a class="dropdown-item" href="./vendas.html">Vendas</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="./cabezales.html">Cabezales</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./bucales.html">Bucales</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./bolsas.html">Bolsas</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./kits.html">Kits</a>
+                </li>
               </ul>
             </div>
           </div>
         </div>
       </nav>
+      <!-- FIN DEL NAV -->
     </header>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea nesciunt ut
-    perferendis magni error dolorem, consequatur quae vel illum earum nisi
-    reprehenderit excepturi laboriosam, iure eos! Ratione quod iure quas? Lorem
-    ipsum, dolor sit amet consectetur adipisicing elit. Vitae blanditiis neque,
-    necessitatibus tempore modi velit? Repellendus exercitationem iusto odio
-    sequi commodi, dignissimos doloribus natus! Autem totam libero ut doloribus
-    iusto. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
-    laudantium eveniet maxime repellat molestias quam quibusdam nihil iste
-    placeat commodi, saepe dolorum vero ex explicabo voluptatum quas esse cum?
-    Asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    Molestias dolores quis nesciunt necessitatibus, perferendis modi. Accusamus
-    id exercitationem ut ex voluptate aliquid voluptas neque illo. Saepe
-    exercitationem dolorum perspiciatis odio. Lorem ipsum dolor sit amet
-    consectetur, adipisicing elit. Cumque quisquam molestias fugit amet placeat!
-    Voluptatibus libero qui asperiores neque soluta totam cum eos nesciunt
-    dicta? Consequatur labore laboriosam corrupti ex?
+    <section>
+      <div class="boxes">
+        <div class="box">
+          <p>Remera Blanca</p>
+          <img src="/imagenes/productos/remeras/remera-white.png" alt="" />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+        <div class="box">
+          <p>Remera Dorada</p>
+          <img src="/imagenes/productos/remeras/remera-dorada.jpg" alt="" />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+        <div class="box">
+          <p>Remera Rosa</p>
+          <img src="/imagenes/productos/remeras/remera-rosa.jpg" alt="" />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+
+        <div class="box">
+          <p>Remera Naranja</p>
+          <img src="/imagenes/productos/remeras/remera-naranja.jpg" alt="" />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+      </div>
+    </section>
     <footer>
       <p>Todos los derechos reservados a Warriors Boxing Gym</p>
     </footer>
