--- a/pages/productos.html
+++ b/pages/productos.html
@@ -32,15 +32,74 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#"
-              >Productos <span class="sr-only">(Actual)</span></a
-            >
             <a class="nav-item nav-link" href="../index.html">Home</a>
-            <a class="nav-item nav-link" href="./quienes-somos.html"
+            <a class="nav-item nav-link" href="quienes-somos.html"
               >Quienes Somos</a
             >
-            <a class="nav-item nav-link" href="./contacto.html">Contacto</a>
-            <a class="nav-item nav-link" href="./ubicacion.html">Ubicación</a>
+            <a class="nav-item nav-link" href="contacto.html">Contacto</a>
+            <a class="nav-item nav-link" href="ubicacion.html">Ubicación</a>
+            <!-- dropdown -->
+            <!-- <div class="nav-item dropdown"> -->
+            <div class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="productos.html"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Productos
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="nav-item nav-link active" href="#"
+                    >Productos <span class="sr-only"></span
+                  ></a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cart-products/remeras.html"
+                    >Remeras</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cart-products/guantes.html"
+                    >Guantes</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./cart-products/musculosas.html"
+                    >Musculosas</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cart-products/vendas.html"
+                    >Vendas</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cart-products/cabezales.html"
+                    >Cabezales</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cart-products/bucales.html"
+                    >Bucales</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cart-products/bolsas.html"
+                    >Bolsas</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cart-products/kits.html"
+                    >Kits</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
