--- a/pages/cart-products/musculosas.html
+++ b/pages/cart-products/musculosas.html
@@ -35,15 +35,108 @@
             <a class="nav-item nav-link active" href="#"
               >Musculosas <span class="sr-only">(Actual)</span></a
             >
+            <a class="nav-item nav-link" href="/index.html">Home</a>
             <a class="nav-item nav-link" href="../contacto.html">Contacto</a>
             <a class="nav-item nav-link" href="../quienes-somos.html"
               >Quienes Somos</a
             >
-            <a class="nav-item nav-link" href="../productos.html">Productos</a>
             <a class="nav-item nav-link" href="../ubicacion.html">Ubicación</a>
+            <!-- dropdown -->
+            <!-- <div class="nav-item dropdown"> -->
+            <div class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="../productos.html"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Productos
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="../productos.html"
+                    >Productos</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./remeras.html">Remeras</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./guantes.html">Guantes</a>
+                </li>
+                <li>
+                  <a class="nav-item nav-link active" href="#"
+                    >Musculosas <span class="sr-only"></span
+                  ></a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./vendas.html">Vendas</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./cabezales.html">Cabezales</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./bucales.html">Bucales</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./bolsas.html">Bolsas</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./kits.html">Kits</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </nav>
+      <!-- FIN DEL NAV -->
     </header>
+    <section>
+      <div class="boxes">
+        <div class="box">
+          <p>Musculosa Blanca</p>
+          <img
+            src="/imagenes/productos/musculosas/musculosa-white.jpg"
+            alt=""
+          />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+        <div class="box">
+          <p>Musculosa Negra</p>
+          <img
+            src="/imagenes/productos/musculosas/musculosa-black.jpg"
+            alt=""
+          />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+        <div class="box">
+          <p>Musculosa Naranja y Negro</p>
+          <img
+            src="/imagenes/productos/musculosas/musculosa-orange.jpg"
+            alt=""
+          />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+
+        <div class="box">
+          <p>Musculosa Naranja y Blanca</p>
+          <img
+            src="/imagenes/productos/musculosas/musculosa-orange-white.jpg"
+            alt=""
+          />
+          <button class="boton-comprar">Comprar</button>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>Todos los derechos reservados a Warriors Boxing Gym</p>
+    </footer>
+    <!-- Script de bootstrap-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
